Moved everything from shared into the data layer

--- a/Stargazer-Godot/New Game Project.csproj
+++ b/Stargazer-Godot/New Game Project.csproj
@@ -7,6 +7,6 @@
     <RootNamespace>NewGameProject</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
   </ItemGroup>
 </Project>
