--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Godot 4+ specific ignores
 .godot/
+*.tscn
 
 # Godot-specific ignores
 .import/
 export.cfg
 export_presets.cfg
+
 
 # Imported translations (automatically generated from CSV files)
 *.translation
