Tried ignoring the tscn files to get rid of the godot non-existent resource issue.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ data_*/
 mono_crash.*.json
 /Stargazer-Godot/.vs
 /Stargazer-Godot/addons/godot-git-plugin
+/Stargazer-Godot/Scenes/main.tscn
+/Stargazer-Godot/Scenes/view.tscn
