--- a/Stargazer-Godot/New Game Project.csproj
+++ b/Stargazer-Godot/New Game Project.csproj
@@ -9,4 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Scenes\" />
+  </ItemGroup>
 </Project>
