--- a/Docs/api/Stargazer.ASTRALPLANEAlbedo.yml
+++ b/Docs/api/Stargazer.ASTRALPLANEAlbedo.yml
@@ -24,6 +24,8 @@ items:
   assemblies:
   - New Game Project
   namespace: Stargazer
+  summary: Handles the transparency of the floor.
+  example: []
   syntax:
     content: >-
       [ScriptPath("res://Code/ASTRALPLANEAlbedo.cs")]
@@ -371,7 +373,7 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer.git
     id: camera
     path: ../Stargazer-Godot/Code/ASTRALPLANEAlbedo.cs
-    startLine: 7
+    startLine: 10
   assemblies:
   - New Game Project
   namespace: Stargazer
@@ -398,7 +400,7 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer.git
     id: mesh
     path: ../Stargazer-Godot/Code/ASTRALPLANEAlbedo.cs
-    startLine: 8
+    startLine: 11
   assemblies:
   - New Game Project
   namespace: Stargazer
@@ -425,7 +427,7 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer.git
     id: material
     path: ../Stargazer-Godot/Code/ASTRALPLANEAlbedo.cs
-    startLine: 9
+    startLine: 12
   assemblies:
   - New Game Project
   namespace: Stargazer
@@ -452,18 +454,11 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer.git
     id: _Ready
     path: ../Stargazer-Godot/Code/ASTRALPLANEAlbedo.cs
-    startLine: 11
+    startLine: 17
   assemblies:
   - New Game Project
   namespace: Stargazer
-  summary: >-
-    <p>Called when the node is "ready", i.e. when both the node and its children have entered the scene tree. If the node has children, their <xref href="Godot.Node._Ready" data-throw-if-not-resolved="false"></xref> callbacks get triggered first, and the parent node will receive the ready notification afterwards.</p>
-
-    <p>Corresponds to the <xref href="Godot.Node.NotificationReady" data-throw-if-not-resolved="false"></xref> notification in <xref href="Godot.GodotObject._Notification(System.Int32)" data-throw-if-not-resolved="false"></xref>. See also the <code>@onready</code> annotation for variables.</p>
-
-    <p>Usually used for initialization. For even earlier initialization, <xref href="Godot.GodotObject.%23ctor" data-throw-if-not-resolved="false"></xref> may be used. See also <xref href="Godot.Node._EnterTree" data-throw-if-not-resolved="false"></xref>.</p>
-
-    <p><b>Note:</b> This method may be called only once for each node. After removing a node from the scene tree and adding it again, <xref href="Godot.Node._Ready" data-throw-if-not-resolved="false"></xref> will <b>not</b> be called a second time. This can be bypassed by requesting another call with <xref href="Godot.Node.RequestReady" data-throw-if-not-resolved="false"></xref>, which may be called anywhere before adding the node again.</p>
+  summary: Gets references to the <xref href="Godot.Camera3D" data-throw-if-not-resolved="false"></xref> and <xref href="Godot.StandardMaterial3D" data-throw-if-not-resolved="false"></xref> of the <xref href="Godot.MeshInstance3D" data-throw-if-not-resolved="false"></xref>
   example: []
   syntax:
     content: public override void _Ready()
@@ -488,24 +483,18 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer.git
     id: _Process
     path: ../Stargazer-Godot/Code/ASTRALPLANEAlbedo.cs
-    startLine: 39
+    startLine: 49
   assemblies:
   - New Game Project
   namespace: Stargazer
-  summary: >-
-    <p>Called during the processing step of the main loop. Processing happens at every frame and as fast as possible, so the <code class="paramref">delta</code> time since the previous frame is not constant. <code class="paramref">delta</code> is in seconds.</p>
-
-    <p>It is only called if processing is enabled, which is done automatically if this method is overridden, and can be toggled with <xref href="Godot.Node.SetProcess(System.Boolean)" data-throw-if-not-resolved="false"></xref>.</p>
-
-    <p>Corresponds to the <xref href="Godot.Node.NotificationProcess" data-throw-if-not-resolved="false"></xref> notification in <xref href="Godot.GodotObject._Notification(System.Int32)" data-throw-if-not-resolved="false"></xref>.</p>
-
-    <p><b>Note:</b> This method is only called if the node is present in the scene tree (i.e. if it's not an orphan).</p>
+  summary: Uses the <xref href="Godot.Camera3D" data-throw-if-not-resolved="false"></xref><code>.Rotation</code> to alter make the floor transparent as the user pans down.
   example: []
   syntax:
     content: public override void _Process(double delta)
     parameters:
     - id: delta
       type: System.Double
+      description: ''
     content.vb: Public Overrides Sub _Process(delta As Double)
   overridden: Godot.Node._Process(System.Double)
   overload: Stargazer.ASTRALPLANEAlbedo._Process*
@@ -7336,25 +7325,6 @@ references:
   - uid: Godot.Node._Ready
     name: _Ready
     isExternal: true
-  - name: (
-  - name: )
-- uid: Godot.GodotObject.#ctor
-  commentId: M:Godot.GodotObject.#ctor
-  isExternal: true
-  name: GodotObject()
-  nameWithType: GodotObject.GodotObject()
-  fullName: Godot.GodotObject.GodotObject()
-  nameWithType.vb: GodotObject.New()
-  fullName.vb: Godot.GodotObject.New()
-  name.vb: New()
-  spec.csharp:
-  - uid: Godot.GodotObject.#ctor
-    name: GodotObject
-    isExternal: true
-  - name: (
-  - name: )
-  spec.vb:
-  - name: New
   - name: (
   - name: )
 - uid: Stargazer.ASTRALPLANEAlbedo._Ready*
