--- a/Docs/api/Stargazer.LabelButton.yml
+++ b/Docs/api/Stargazer.LabelButton.yml
@@ -16,7 +16,7 @@ items:
   type: Class
   source:
     id: LabelButton
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSerializationGenerator\Stargazer.LabelButton_ScriptSerialization.generated.cs
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSignalsGenerator\Stargazer.LabelButton_ScriptSignals.generated.cs
     startLine: 5
   assemblies:
   - New Game Project
