--- a/Docs/filterconfig.yml
+++ b/Docs/filterconfig.yml
@@ -1,3 +1,4 @@
+### YamlMime:ManagedReference
 apiRules:
   - exclude:
       uidRegex: "^.*\\.[^.]*Name$"  # Excludes all subclasses ending in 'Name'
