--- a/Docs/api/Stargazer.Constellations.yml
+++ b/Docs/api/Stargazer.Constellations.yml
@@ -25,7 +25,7 @@ items:
   type: Class
   source:
     id: Constellations
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPropertiesGenerator\Stargazer.Constellations_ScriptProperties.generated.cs
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSignalsGenerator\Stargazer.Constellations_ScriptSignals.generated.cs
     startLine: 5
   assemblies:
   - New Game Project
