--- a/Docs/api/Stargazer.Main.yml
+++ b/Docs/api/Stargazer.Main.yml
@@ -24,7 +24,7 @@ items:
   type: Class
   source:
     id: Main
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPropertiesGenerator\Stargazer.Main_ScriptProperties.generated.cs
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptMethodsGenerator\Stargazer.Main_ScriptMethods.generated.cs
     startLine: 5
   assemblies:
   - New Game Project
