--- a/Docs/api/Stargazer.StarMesh.yml
+++ b/Docs/api/Stargazer.StarMesh.yml
@@ -17,8 +17,8 @@ items:
   type: Class
   source:
     id: StarMesh
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPropertyDefValGenerator\Stargazer.StarMesh_ScriptPropertyDefVal.generated.cs
-    startLine: 2
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPathAttributeGenerator\Stargazer.StarMesh_ScriptPath.generated.cs
+    startLine: 3
   assemblies:
   - New Game Project
   namespace: Stargazer
