--- a/Docs/api/Stargazer.Startup.yml
+++ b/Docs/api/Stargazer.Startup.yml
@@ -19,7 +19,7 @@ items:
   type: Class
   source:
     id: Startup
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptMethodsGenerator\Stargazer.Startup_ScriptMethods.generated.cs
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPropertiesGenerator\Stargazer.Startup_ScriptProperties.generated.cs
     startLine: 5
   assemblies:
   - New Game Project
@@ -629,18 +629,14 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer.git
     id: _Ready
     path: ../Stargazer-Godot/Code/Startup.cs
-    startLine: 23
+    startLine: 27
   assemblies:
   - New Game Project
   namespace: Stargazer
   summary: >-
-    <p>Called when the node is "ready", i.e. when both the node and its children have entered the scene tree. If the node has children, their <xref href="Godot.Node._Ready" data-throw-if-not-resolved="false"></xref> callbacks get triggered first, and the parent node will receive the ready notification afterwards.</p>
+    Creates the repository service and stores in memory
 
-    <p>Corresponds to the <xref href="Godot.Node.NotificationReady" data-throw-if-not-resolved="false"></xref> notification in <xref href="Godot.GodotObject._Notification(System.Int32)" data-throw-if-not-resolved="false"></xref>. See also the <code>@onready</code> annotation for variables.</p>
-
-    <p>Usually used for initialization. For even earlier initialization, <xref href="Godot.GodotObject.%23ctor" data-throw-if-not-resolved="false"></xref> may be used. See also <xref href="Godot.Node._EnterTree" data-throw-if-not-resolved="false"></xref>.</p>
-
-    <p><b>Note:</b> This method may be called only once for each node. After removing a node from the scene tree and adding it again, <xref href="Godot.Node._Ready" data-throw-if-not-resolved="false"></xref> will <b>not</b> be called a second time. This can be bypassed by requesting another call with <xref href="Godot.Node.RequestReady" data-throw-if-not-resolved="false"></xref>, which may be called anywhere before adding the node again.</p>
+    Gathers references to sender/receiver nodes and connects <xref href="System.Delegate" data-throw-if-not-resolved="false"></xref>s for communication.
   example: []
   syntax:
     content: public override void _Ready()
@@ -665,7 +661,7 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer.git
     id: UpdateUserPosition
     path: ../Stargazer-Godot/Code/Startup.cs
-    startLine: 51
+    startLine: 55
   assemblies:
   - New Game Project
   namespace: Stargazer
@@ -12384,25 +12380,6 @@ references:
   - uid: Godot.Node._Ready
     name: _Ready
     isExternal: true
-  - name: (
-  - name: )
-- uid: Godot.GodotObject.#ctor
-  commentId: M:Godot.GodotObject.#ctor
-  isExternal: true
-  name: GodotObject()
-  nameWithType: GodotObject.GodotObject()
-  fullName: Godot.GodotObject.GodotObject()
-  nameWithType.vb: GodotObject.New()
-  fullName.vb: Godot.GodotObject.New()
-  name.vb: New()
-  spec.csharp:
-  - uid: Godot.GodotObject.#ctor
-    name: GodotObject
-    isExternal: true
-  - name: (
-  - name: )
-  spec.vb:
-  - name: New
   - name: (
   - name: )
 - uid: Stargazer.Startup._Ready*
