Reinserted deleted communication methods. Removed duplicated Skyview.tscn

--- a/Docs/api/Stargazer.ConstellationButton.yml
+++ b/Docs/api/Stargazer.ConstellationButton.yml
@@ -16,8 +16,8 @@ items:
   type: Class
   source:
     id: ConstellationButton
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPathAttributeGenerator\Stargazer.ConstellationButton_ScriptPath.generated.cs
-    startLine: 3
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSignalsGenerator\Stargazer.ConstellationButton_ScriptSignals.generated.cs
+    startLine: 5
   assemblies:
   - New Game Project
   namespace: Stargazer
