--- a/Docs/api/Stargazer.Constellations2D.yml
+++ b/Docs/api/Stargazer.Constellations2D.yml
@@ -25,8 +25,8 @@ items:
   type: Class
   source:
     id: Constellations2D
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSignalsGenerator\Stargazer.Constellations2D_ScriptSignals.generated.cs
-    startLine: 5
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPropertyDefValGenerator\Stargazer.Constellations2D_ScriptPropertyDefVal.generated.cs
+    startLine: 2
   assemblies:
   - New Game Project
   namespace: Stargazer
