--- a/Docs/api/Stargazer.Moon.yml
+++ b/Docs/api/Stargazer.Moon.yml
@@ -22,7 +22,7 @@ items:
   type: Class
   source:
     id: Moon
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSerializationGenerator\Stargazer.Moon_ScriptSerialization.generated.cs
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptMethodsGenerator\Stargazer.Moon_ScriptMethods.generated.cs
     startLine: 5
   assemblies:
   - New Game Project
