--- a/Docs/api/Stargazer.Planets.yml
+++ b/Docs/api/Stargazer.Planets.yml
@@ -16,8 +16,8 @@ items:
   type: Class
   source:
     id: Planets
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPathAttributeGenerator\Stargazer.Planets_ScriptPath.generated.cs
-    startLine: 3
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPropertyDefValGenerator\Stargazer.Planets_ScriptPropertyDefVal.generated.cs
+    startLine: 2
   assemblies:
   - New Game Project
   namespace: Stargazer
