--- a/Docs/api/Stargazer.ControlContainer.yml
+++ b/Docs/api/Stargazer.ControlContainer.yml
@@ -9,6 +9,10 @@ items:
   - Stargazer.ControlContainer.ConstellationLabelsToggled
   - Stargazer.ControlContainer.ConstellationsToggled
   - Stargazer.ControlContainer.MessierObjectsTogggled
+  - Stargazer.ControlContainer.ToggleAzimuth(System.Boolean)
+  - Stargazer.ControlContainer.ToggleConstellationLabels(System.Boolean)
+  - Stargazer.ControlContainer.ToggleConstellations(System.Boolean)
+  - Stargazer.ControlContainer.ToggleMessierObjects(System.Boolean)
   - Stargazer.ControlContainer.UpdateUserPosition
   - Stargazer.ControlContainer.UserPositionUpdated
   langs:
@@ -20,7 +24,7 @@ items:
   type: Class
   source:
     id: ControlContainer
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSerializationGenerator\Stargazer.ControlContainer_ScriptSerialization.generated.cs
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPropertiesGenerator\Stargazer.ControlContainer_ScriptProperties.generated.cs
     startLine: 5
   assemblies:
   - New Game Project
@@ -714,6 +718,134 @@ items:
     content: public void UpdateUserPosition()
     content.vb: Public Sub UpdateUserPosition()
   overload: Stargazer.ControlContainer.UpdateUserPosition*
+- uid: Stargazer.ControlContainer.ToggleAzimuth(System.Boolean)
+  commentId: M:Stargazer.ControlContainer.ToggleAzimuth(System.Boolean)
+  id: ToggleAzimuth(System.Boolean)
+  parent: Stargazer.ControlContainer
+  langs:
+  - csharp
+  - vb
+  name: ToggleAzimuth(bool)
+  nameWithType: ControlContainer.ToggleAzimuth(bool)
+  fullName: Stargazer.ControlContainer.ToggleAzimuth(bool)
+  type: Method
+  source:
+    remote:
+      path: Stargazer-Godot/Code/ControlContainer.cs
+      branch: update-docs
+      repo: https://github.com/CS-499-Group-9/Stargazer
+    id: ToggleAzimuth
+    path: ../Stargazer-Godot/Code/ControlContainer.cs
+    startLine: 46
+  assemblies:
+  - New Game Project
+  namespace: Stargazer
+  syntax:
+    content: public void ToggleAzimuth(bool value)
+    parameters:
+    - id: value
+      type: System.Boolean
+    content.vb: Public Sub ToggleAzimuth(value As Boolean)
+  overload: Stargazer.ControlContainer.ToggleAzimuth*
+  nameWithType.vb: ControlContainer.ToggleAzimuth(Boolean)
+  fullName.vb: Stargazer.ControlContainer.ToggleAzimuth(Boolean)
+  name.vb: ToggleAzimuth(Boolean)
+- uid: Stargazer.ControlContainer.ToggleConstellations(System.Boolean)
+  commentId: M:Stargazer.ControlContainer.ToggleConstellations(System.Boolean)
+  id: ToggleConstellations(System.Boolean)
+  parent: Stargazer.ControlContainer
+  langs:
+  - csharp
+  - vb
+  name: ToggleConstellations(bool)
+  nameWithType: ControlContainer.ToggleConstellations(bool)
+  fullName: Stargazer.ControlContainer.ToggleConstellations(bool)
+  type: Method
+  source:
+    remote:
+      path: Stargazer-Godot/Code/ControlContainer.cs
+      branch: update-docs
+      repo: https://github.com/CS-499-Group-9/Stargazer
+    id: ToggleConstellations
+    path: ../Stargazer-Godot/Code/ControlContainer.cs
+    startLine: 47
+  assemblies:
+  - New Game Project
+  namespace: Stargazer
+  syntax:
+    content: public void ToggleConstellations(bool value)
+    parameters:
+    - id: value
+      type: System.Boolean
+    content.vb: Public Sub ToggleConstellations(value As Boolean)
+  overload: Stargazer.ControlContainer.ToggleConstellations*
+  nameWithType.vb: ControlContainer.ToggleConstellations(Boolean)
+  fullName.vb: Stargazer.ControlContainer.ToggleConstellations(Boolean)
+  name.vb: ToggleConstellations(Boolean)
+- uid: Stargazer.ControlContainer.ToggleConstellationLabels(System.Boolean)
+  commentId: M:Stargazer.ControlContainer.ToggleConstellationLabels(System.Boolean)
+  id: ToggleConstellationLabels(System.Boolean)
+  parent: Stargazer.ControlContainer
+  langs:
+  - csharp
+  - vb
+  name: ToggleConstellationLabels(bool)
+  nameWithType: ControlContainer.ToggleConstellationLabels(bool)
+  fullName: Stargazer.ControlContainer.ToggleConstellationLabels(bool)
+  type: Method
+  source:
+    remote:
+      path: Stargazer-Godot/Code/ControlContainer.cs
+      branch: update-docs
+      repo: https://github.com/CS-499-Group-9/Stargazer
+    id: ToggleConstellationLabels
+    path: ../Stargazer-Godot/Code/ControlContainer.cs
+    startLine: 48
+  assemblies:
+  - New Game Project
+  namespace: Stargazer
+  syntax:
+    content: public void ToggleConstellationLabels(bool value)
+    parameters:
+    - id: value
+      type: System.Boolean
+    content.vb: Public Sub ToggleConstellationLabels(value As Boolean)
+  overload: Stargazer.ControlContainer.ToggleConstellationLabels*
+  nameWithType.vb: ControlContainer.ToggleConstellationLabels(Boolean)
+  fullName.vb: Stargazer.ControlContainer.ToggleConstellationLabels(Boolean)
+  name.vb: ToggleConstellationLabels(Boolean)
+- uid: Stargazer.ControlContainer.ToggleMessierObjects(System.Boolean)
+  commentId: M:Stargazer.ControlContainer.ToggleMessierObjects(System.Boolean)
+  id: ToggleMessierObjects(System.Boolean)
+  parent: Stargazer.ControlContainer
+  langs:
+  - csharp
+  - vb
+  name: ToggleMessierObjects(bool)
+  nameWithType: ControlContainer.ToggleMessierObjects(bool)
+  fullName: Stargazer.ControlContainer.ToggleMessierObjects(bool)
+  type: Method
+  source:
+    remote:
+      path: Stargazer-Godot/Code/ControlContainer.cs
+      branch: update-docs
+      repo: https://github.com/CS-499-Group-9/Stargazer
+    id: ToggleMessierObjects
+    path: ../Stargazer-Godot/Code/ControlContainer.cs
+    startLine: 49
+  assemblies:
+  - New Game Project
+  namespace: Stargazer
+  syntax:
+    content: public void ToggleMessierObjects(bool value)
+    parameters:
+    - id: value
+      type: System.Boolean
+    content.vb: Public Sub ToggleMessierObjects(value As Boolean)
+  overload: Stargazer.ControlContainer.ToggleMessierObjects*
+  nameWithType.vb: ControlContainer.ToggleMessierObjects(Boolean)
+  fullName.vb: Stargazer.ControlContainer.ToggleMessierObjects(Boolean)
+  name.vb: ToggleMessierObjects(Boolean)
 references:
 - uid: Stargazer
   commentId: N:Stargazer
@@ -12805,3 +12937,38 @@ references:
   name: UpdateUserPosition
   nameWithType: ControlContainer.UpdateUserPosition
   fullName: Stargazer.ControlContainer.UpdateUserPosition
+- uid: Stargazer.ControlContainer.ToggleAzimuth*
+  commentId: Overload:Stargazer.ControlContainer.ToggleAzimuth
+  href: Stargazer.ControlContainer.html#Stargazer_ControlContainer_ToggleAzimuth_System_Boolean_
+  name: ToggleAzimuth
+  nameWithType: ControlContainer.ToggleAzimuth
+  fullName: Stargazer.ControlContainer.ToggleAzimuth
+- uid: System.Boolean
+  commentId: T:System.Boolean
+  parent: System
+  isExternal: true
+  href: https://learn.microsoft.com/dotnet/api/system.boolean
+  name: bool
+  nameWithType: bool
+  fullName: bool
+  nameWithType.vb: Boolean
+  fullName.vb: Boolean
+  name.vb: Boolean
+- uid: Stargazer.ControlContainer.ToggleConstellations*
+  commentId: Overload:Stargazer.ControlContainer.ToggleConstellations
+  href: Stargazer.ControlContainer.html#Stargazer_ControlContainer_ToggleConstellations_System_Boolean_
+  name: ToggleConstellations
+  nameWithType: ControlContainer.ToggleConstellations
+  fullName: Stargazer.ControlContainer.ToggleConstellations
+- uid: Stargazer.ControlContainer.ToggleConstellationLabels*
+  commentId: Overload:Stargazer.ControlContainer.ToggleConstellationLabels
+  href: Stargazer.ControlContainer.html#Stargazer_ControlContainer_ToggleConstellationLabels_System_Boolean_
+  name: ToggleConstellationLabels
+  nameWithType: ControlContainer.ToggleConstellationLabels
+  fullName: Stargazer.ControlContainer.ToggleConstellationLabels
+- uid: Stargazer.ControlContainer.ToggleMessierObjects*
+  commentId: Overload:Stargazer.ControlContainer.ToggleMessierObjects
+  href: Stargazer.ControlContainer.html#Stargazer_ControlContainer_ToggleMessierObjects_System_Boolean_
+  name: ToggleMessierObjects
+  nameWithType: ControlContainer.ToggleMessierObjects
+  fullName: Stargazer.ControlContainer.ToggleMessierObjects
