--- a/Docs/api/Stargazer.LabelButton.yml
+++ b/Docs/api/Stargazer.LabelButton.yml
@@ -16,8 +16,8 @@ items:
   type: Class
   source:
     id: LabelButton
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPropertiesGenerator\Stargazer.LabelButton_ScriptProperties.generated.cs
-    startLine: 5
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPathAttributeGenerator\Stargazer.LabelButton_ScriptPath.generated.cs
+    startLine: 3
   assemblies:
   - New Game Project
   namespace: Stargazer
