--- a/Docs/api/Stargazer.Planet.yml
+++ b/Docs/api/Stargazer.Planet.yml
@@ -21,7 +21,7 @@ items:
   type: Class
   source:
     id: Planet
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSignalsGenerator\Stargazer.Planet_ScriptSignals.generated.cs
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSerializationGenerator\Stargazer.Planet_ScriptSerialization.generated.cs
     startLine: 5
   assemblies:
   - New Game Project
