--- a/Stargazer-Godot/New Game Project.csproj
+++ b/Stargazer-Godot/New Game Project.csproj
@@ -13,4 +13,7 @@
   <ItemGroup>
     <Folder Include="Scenes\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.7" />
+  </ItemGroup>
 </Project>
